--- a/app/src/main/res/layout/fragment_create_notes.xml
+++ b/app/src/main/res/layout/fragment_create_notes.xml
@@ -35,6 +35,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/et_title"
             tools:text="desc" />
+        <Button
+            android:id="@+id/btn_save_note"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:fontFamily="@font/neon_font"
+            android:gravity="center"
+            android:text="Save Notes"
+            android:padding="8dp"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+             />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_color_palette"
@@ -44,9 +58,10 @@
             android:orientation="horizontal"
             android:scrollbars="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/btn_save_note"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/et_desc"
             tools:itemCount="20"
             tools:listitem="@layout/rv_item_color_palettes" />
     </androidx.constraintlayout.widget.ConstraintLayout>
