--- a/app/src/main/res/layout/fragment_view_notes.xml
+++ b/app/src/main/res/layout/fragment_view_notes.xml
@@ -6,7 +6,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.notes.ViewNotesFragment">
+        tools:context=".presentation.notes.component.ViewNotesFragment">
 
 
         <androidx.recyclerview.widget.RecyclerView
