--- a/app/src/main/res/layout/fragment_create_notes.xml
+++ b/app/src/main/res/layout/fragment_create_notes.xml
@@ -8,33 +8,48 @@
         android:layout_height="match_parent"
         tools:context=".presentation.createnotes.CreateNotesFragment">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_title"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tl_title"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="8dp"
-            android:fontFamily="@font/neon_font"
-            android:padding="8dp"
-            android:textSize="32sp"
+            android:hint="@string/def_text_enter_note_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@string/def_text_enter_note_title" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_desc"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/neon_font"
+                android:padding="8dp"
+                android:textSize="32sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tl_desc"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="8dp"
             android:fontFamily="@font/neon_font"
             android:gravity="top"
-            android:padding="8dp"
-            android:textSize="24sp"
+            android:hint="@string/def_text_enter_description"
             app:layout_constraintBottom_toTopOf="@+id/rv_color_palette"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_title"
-            android:text="@string/def_text_enter_description" />
+            app:layout_constraintTop_toBottomOf="@+id/tl_title">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_desc"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/neon_font"
+                android:gravity="top"
+                android:padding="8dp"
+                android:textSize="24sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/btn_save_note"
             android:layout_width="match_parent"
@@ -42,13 +57,12 @@
             android:layout_margin="8dp"
             android:fontFamily="@font/neon_font"
             android:gravity="center"
-            android:text="@string/def_text_save_notes"
             android:padding="8dp"
+            android:text="@string/def_text_save_notes"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-             />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_color_palette"
@@ -61,7 +75,7 @@
             app:layout_constraintBottom_toTopOf="@id/btn_save_note"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/et_desc"
+            app:layout_constraintTop_toBottomOf="@id/tl_desc"
             tools:itemCount="20"
             tools:listitem="@layout/rv_item_color_palettes" />
     </androidx.constraintlayout.widget.ConstraintLayout>
