--- a/app/src/main/res/layout/notes_tiles.xml
+++ b/app/src/main/res/layout/notes_tiles.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/layout_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,6 +20,7 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
+
                 android:fontFamily="@font/neon_font"
                 android:text="Coffee"
                 android:textSize="20sp"
@@ -33,10 +34,11 @@
                 android:id="@+id/tv_notes_desc"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_margin="8dp"
                 android:fontFamily="@font/neon_font"
                 android:text="Prepare hot coffee please"
                 android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/tv_notes_title"
                 app:layout_constraintStart_toStartOf="@+id/tv_notes_title"
                 app:layout_constraintTop_toBottomOf="@id/tv_notes_title" />
@@ -50,6 +52,7 @@
                 android:background="@drawable/textview_border_background"
                 android:fontFamily="@font/neon_font"
                 android:padding="8dp"
+                android:visibility="gone"
                 android:text="Today, 4:30"
                 android:textSize="14sp"
                 android:textStyle="bold"
