--- a/app/src/main/res/layout/notes_tiles.xml
+++ b/app/src/main/res/layout/notes_tiles.xml
@@ -13,6 +13,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/img_edit_note"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="12dp"
+                android:src="@drawable/ic_edit_notes"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_notes_title"
                 android:layout_width="0dp"
@@ -52,10 +61,10 @@
                 android:background="@drawable/textview_border_background"
                 android:fontFamily="@font/neon_font"
                 android:padding="8dp"
-                android:visibility="gone"
                 android:text="Today, 4:30"
                 android:textSize="14sp"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/tv_notes_title"
                 app:layout_constraintTop_toBottomOf="@+id/tv_notes_desc" />
