--- a/app/src/main/res/layout/fragment_update_notes.xml
+++ b/app/src/main/res/layout/fragment_update_notes.xml
@@ -63,14 +63,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/btn_save_note"
+            android:id="@+id/btn_update_note"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:fontFamily="@font/neon_font"
             android:gravity="center"
             android:padding="8dp"
-            android:text="@string/def_text_save_notes"
+            android:text="@string/def_text_update_notes"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -84,11 +84,12 @@
             android:orientation="horizontal"
             android:scrollbars="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/btn_save_note"
+            app:layout_constraintBottom_toTopOf="@id/btn_update_note"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tl_desc"
             tools:itemCount="20"
             tools:listitem="@layout/rv_item_color_palettes" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
