--- a/app/src/main/res/layout/fragment_view_notes.xml
+++ b/app/src/main/res/layout/fragment_view_notes.xml
@@ -39,5 +39,16 @@
             app:layout_constraintStart_toStartOf="parent"
             android:textColor="@color/teal_700"
             />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_create_notes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="32dp"
+            android:layout_marginVertical="32dp"
+            android:contentDescription="@string/this_is_action_button"
+            android:src="@drawable/baseline_note_add_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
