--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.NotesDemo" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.NotesDemo" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.NotesDemo" parent="Base.Theme.NotesDemo" />
+    <style name="Theme.NotesDemo" parent="Base.Theme.NotesDemo">
+    <!-- Primary brand color. -->
+    <item name="colorPrimary">#05437c</item>
+    <item name="colorPrimaryVariant">#38aed2</item>
+    <item name="colorOnPrimary">@color/white</item>
+    <!-- Secondary brand color. -->
+    <item name="colorSecondary">@color/teal_200</item>
+    <item name="colorSecondaryVariant">@color/teal_700</item>
+    <item name="colorOnSecondary">@color/black</item>
+    <!-- Status bar color. -->
+    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    </style>
+
 
     <style name="Theme.NotesDemo.SplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/gray</item>
