--- a/app/src/main/res/layout/fragment_create_notes.xml
+++ b/app/src/main/res/layout/fragment_create_notes.xml
@@ -16,79 +16,93 @@
         android:layout_height="match_parent"
         tools:context=".presentation.createnotes.CreateNotesFragment">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tl_title"
-            android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_margin="8dp"
-            android:hint="@string/def_text_enter_note_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_title"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/neon_font"
-                android:onTextChanged="@{(text, start, before, count) -> notesViewModel.onTitleTextChanged(text)}"
-                android:padding="8dp"
-                android:text="@{notesViewModel.titleTextObserver}"
-                android:textSize="32sp" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tl_desc"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="8dp"
-            android:fontFamily="@font/neon_font"
-            android:gravity="top"
-            android:hint="@string/def_text_enter_description"
-            app:layout_constraintBottom_toTopOf="@+id/rv_color_palette"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tl_title">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_desc"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/neon_font"
-                android:gravity="top"
-                android:onTextChanged="@{(text, start, before, count) -> notesViewModel.onDescTextChanged(text)}"
-                android:padding="8dp"
-                android:text="@{notesViewModel.descTextObserver}"
-                android:textSize="24sp" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Button
-            android:id="@+id/btn_save_note"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:fontFamily="@font/neon_font"
-            android:gravity="center"
-            android:padding="8dp"
-            android:text="@string/def_text_save_notes"
-            android:textSize="24sp"
+            android:paddingVertical="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_color_palette"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:orientation="horizontal"
-            android:scrollbars="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/btn_save_note"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tl_desc"
-            tools:itemCount="20"
-            tools:listitem="@layout/rv_item_color_palettes" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.98">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tl_title"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:hint="@string/def_text_enter_note_title"
+                app:hintTextColor="@color/primary"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/neon_font"
+                    android:inputType="textCapWords"
+                    android:maxLength="10"
+                    android:onTextChanged="@{(text, start, before, count) -> notesViewModel.onTitleTextChanged(text)}"
+                    android:text="@{notesViewModel.titleTextObserver}"
+                    android:textSize="26sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tl_desc"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:fontFamily="@font/neon_font"
+                android:gravity="top"
+                android:hint="@string/def_text_enter_description"
+                app:hintTextColor="@color/primary"
+                app:layout_constraintBottom_toTopOf="@+id/rv_color_palette"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tl_title">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_desc"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/neon_font"
+                    android:gravity="top"
+                    android:onTextChanged="@{(text, start, before, count) -> notesViewModel.onDescTextChanged(text)}"
+                    android:text="@{notesViewModel.descTextObserver}"
+                    android:textSize="20sp"
+                    android:inputType="textCapSentences"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_color_palette"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toTopOf="@id/btn_save_note"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tl_desc"
+                tools:itemCount="20"
+                tools:listitem="@layout/rv_item_color_palettes" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_save_note"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="5dp"
+                android:background="@color/primary"
+                android:fontFamily="@font/neon_font"
+                android:gravity="center"
+                android:text="@string/def_text_save_notes"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
