--- a/app/src/main/res/layout/notes_tiles.xml
+++ b/app/src/main/res/layout/notes_tiles.xml
@@ -6,35 +6,40 @@
         android:id="@+id/layout_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:cardCornerRadius="16dp">
+        android:layout_margin="4dp"
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="3dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/parent_lay"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingVertical="8dp">
 
             <ImageView
                 android:id="@+id/img_edit_note"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
                 android:contentDescription="@string/imageview_to_edit"
-                android:src="@drawable/ic_edit_notes"
+                android:padding="5dp"
+                android:src="@drawable/ic_edit_24"
+                android:layout_marginEnd="5dp"
+                app:layout_constraintBottom_toTopOf="@+id/tv_notes_desc"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/tv_notes_title" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_notes_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginHorizontal="10dp"
                 android:fontFamily="@font/neon_font"
+                android:textColor="@color/black"
                 android:text="Coffee"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constrainedWidth="true"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/img_edit_note"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -42,12 +47,12 @@
                 android:id="@+id/tv_notes_desc"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginBottom="5dp"
                 android:fontFamily="@font/neon_font"
                 android:text="Prepare hot coffee please"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/tv_notes_title"
+                app:layout_constraintEnd_toEndOf="@+id/img_edit_note"
                 app:layout_constraintStart_toStartOf="@+id/tv_notes_title"
                 app:layout_constraintTop_toBottomOf="@id/tv_notes_title" />
 
