--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.NotesDemo" parent="Theme.Material3.DayNight">
+    <style name="Base.Theme.NotesDemo" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
@@ -15,13 +15,13 @@
     <item name="colorSecondaryVariant">@color/teal_700</item>
     <item name="colorOnSecondary">@color/black</item>
     <!-- Status bar color. -->
-    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
 
 
     <style name="Theme.NotesDemo.SplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/gray</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/notes</item>
-        <item name="postSplashScreenTheme">@style/Base.Theme.NotesDemo</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo</item>
+        <item name="postSplashScreenTheme">@style/Theme.NotesDemo</item>
     </style>
 </resources>
